# solana-grpc-indexer

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  prometheus.yml
src/: .vimrc  config.rs  main.rs  metrics.rs
src/api/: mod.rs  prometheus_metrics.rs
src/input/: parser.rs  stream.rs
src/output/: console.rs  mod.rs
