[package]
name = "solana-grpc-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
futures-util = "0.3.32"
helius-laserstream = "0.1.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.52.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
